fixed scroll-margin for anchors and header size on mobile

--- a/styles.css
+++ b/styles.css
@@ -323,6 +323,8 @@ nav ul li a:hover {
     inset: 0;
     top: 70px;
     height: calc(100dvh - 70px);
+    display: flex;
+    flex-direction: column;
   }
 
   nav {
@@ -338,11 +340,24 @@ nav ul li a:hover {
   }
 
   header {
+    min-height: 100dvh;
     margin-left: unset;
-    padding: 6rem 2rem 4rem 2rem;
+    padding: 4rem 2rem 4rem 2rem;
+    align-items: center;
+  }
+
+  .headline {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .heading {
+    font-size: 3rem;
   }
 
   section {
+    scroll-margin-top: 70px; 
     margin-left: unset;
     padding: 3rem 2rem;
   }
